# user-parking-info

./: Cargo.toml  README.md  info.env
src/: main.rs
src/models/: login_request.rs  mod.rs  parking_lot_info.rs  user.rs  vehicle_registration_info.rs  vehicle_type.rs
src/services/: lot_controller.rs  lot_service.rs  lot_service_impl.rs  mod.rs  user_controller.rs  user_service.rs  user_service_impl.rs
src/utils/: auth.rs
