[package]
name = "user-parking-info"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
actix-web = "4.0"
aws-sdk-dynamodb = "1.50.0"
jsonwebtoken = "8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1.68"  # Added async-trait